--- a/src/App.css
+++ b/src/App.css
@@ -30,4 +30,18 @@ label {
 
 .true {
   border: 2px solid green;
+  outline: 2px solid green;
+  box-shadow: 0px 0px 5px lightgreen;
+}
+
+.false {
+  border: 2px solid red;
+  box-shadow: 0px 0px 5px coral;
+}
+
+.submit {
+  font-size: 1rem;
+  padding: 0.5rem 2rem;
+  background-color: bisque;
+  box-shadow: 0px 0px 3px white;
 }
